--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -7,10 +7,10 @@
         <p class="pr-5 text-white-50">Vous aussi, concrétisez votre projet !</p>
         <br>
         <div class="text-left center-block">
-          <a href="https://www.facebook.com" style="color:#34ace0;"><i id="social-fb" class="fa fa-facebook-square fa-3x social"></i></a>
-          <a href="https://twitter.com" style="color:#34ace0;"><i id="social-tw" class="fa fa-twitter-square fa-3x social"></i></a>
-          <a href="https://plus.google.com" style="color:#34ace0;"><i id="social-gp" class="fa fa-google-plus-square fa-3x social"></i></a>
-          <a href="#" style="color:#34ace0;"><i id="social-em" class="fa fa-envelope-square fa-3x social"></i></a>
+          <a href="https://www.facebook.com" style="color:#2a75bd;"><i id="social-fb" class="fa fa-facebook-square fa-3x social"></i></a>
+          <a href="https://twitter.com" style="color:#2a75bd;"><i id="social-tw" class="fa fa-twitter-square fa-3x social"></i></a>
+          <a href="https://plus.google.com" style="color:#2a75bd;"><i id="social-gp" class="fa fa-google-plus-square fa-3x social"></i></a>
+          <a href="#" style="color:#2a75bd"><i id="social-em" class="fa fa-envelope-square fa-3x social"></i></a>
         </div>
       </div>
       <div class="col-md-4">
