--- a/app/views/proposals/new.html.erb
+++ b/app/views/proposals/new.html.erb
@@ -18,7 +18,7 @@
         <label class="col-sm-1 label-on-left"></label>
         <div class="col-sm-9">
           <div class="form-group label-floating">
-            <%= f.label :purpose, "Précisions *", class:'control-label' %>  
+            <%= f.label :purpose, "Objectif *", class:'control-label' %>  
             <%= f.text_field :purpose, autofocus: true, autocomplete: "purpose", class: "form-control" %>
           </div>
         </div>
