--- a/app/views/proposals/show.html.erb
+++ b/app/views/proposals/show.html.erb
@@ -1,33 +1,93 @@
 <div class="container">
-  <br><br><br>
+  <br><br><br><br>
   <div class="row">
-    <div class="col-md-8">
+    <div class="col-md-6">
       <div class="card card-product">
-        <div class="card-image" data-header-animation="true" style="height: 300px">
+        <div class="card-image" data-header-animation="true">
           <%if @proposal.picture.attached?%>
-            <%= image_tag @proposal.picture, alt: 'Picture' %>
+          <%= image_tag @proposal.picture, alt: 'Picture', class: 'img' %>
           <%else%>
-            <p>Aucun image</p>
+          <p>Aucun image</p>
           <%end%>
         </div>
-        <div class="card-content">
+        <div class="card-content" style="padding-top: 0px">
           <div class="card-actions">
-            <a href ='<%= @proposal.city.id %>' class="btn btn-simple" style='color: #2eb67d; '>
-              <i class="material-icons">location_city</i> <%= @proposal.city.name %>
-            </a>
-            <a href ='#' class="btn btn-simple" style='color: #e01e5a; '>
-              <i class="material-icons">category</i> <%= @proposal.category.name %>
-            </a>
-          </div>
-          <h4 class="card-title">
-            <%= @proposal.title %>
-          </h4>
-          <div class="card-description">
-            <%= @proposal.purpose %>
+            <button type="button" class="btn btn-danger btn-simple fix-broken-card">
+              <i class="material-icons">build</i> Remettre l'image
+            </button>
           </div>
         </div>
-        <div class="card-footer p-2">
-          <%= @proposal.description %>
+        <div class="card-header">
+          <h4 class="card-title text-wrap"><%= @proposal.title %><br>
+            <small><%= @proposal.category.name %></small> -
+            <small><%= @proposal.city.name %></small>
+          </h4>
+        </div>
+        <div class="card-content text-wrap">
+          <ul class="nav nav-pills nav-pills-warnin">
+            <li class="active primary">
+              <a href="#pill1" data-toggle="tab">A quel problème souhaite répondre <%= @proposal.user.first_name %> ?</a>
+            </li>
+            <li>
+              <a href="#pill2" data-toggle="tab">Concrètement que souhaite t-il mettre en place ?</a>
+            </li>
+          </ul>
+          <div class="tab-content">
+            <div class="tab-pane active" id="pill1">
+              <%= @proposal.purpose %>
+            </div>
+            <div class="tab-pane" id="pill2">
+              <%= @proposal.description %>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class='col-md-1'></div>
+    <div class="col-md-5">
+      <div class="col">
+        <div class="card card-testimonial">
+          <div class="card-content">
+            <h5 class="card-description">
+              Une proposition de
+            </h5>
+          </div>
+          <div class="footer">
+            <h4 class="card-title"><%= @proposal.user.first_name %> <%= @proposal.user.last_name %></h4>
+            <h6 class="category"><%= @proposal.user.email %></h6>
+            <div class="card-avatar">
+              <a href="#pablo">
+                <% if @proposal.user.avatar.attached? %>
+                <%= image_tag @proposal.user.avatar, alt: 'Picture', class:'img' %>
+                <% else %>
+                <p>Aucun avatar</p>
+                <% end %>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <br><br><br>
+      <div class="col">
+        <div class="card card-stats">
+          <div class="card-content">
+            <p class="category">Votes</p>
+            <h3 class="card-title"><%= @proposal.votes_count %></h3>
+          </div>
+          <div class='text-center'>
+            <%if @proposal.vote_of(current_user)%>
+                <%= link_to "A voté", proposal_vote_path(@proposal.id, @proposal.vote_of(current_user).id), :class => "btn btn-primary", method: :delete %>
+              <%else%>
+                <%= link_to "Je vote", proposal_votes_path(@proposal.id), :class => "btn btn-secondary", method: :post %>
+              <% end %>
+            </div>
+          <div class="card-footer">
+            <div class="stats">
+              <i class="material-icons">arrow_circle_up</i> classement général : <%= @proposal.general_classification %> <br>
+              <i class="material-icons">arrow_circle_up</i>
+              <i class="material-icons">category</i> Classement catégorie <%= @proposal.category.name %> : <%= @proposal.category_classification %>
+            </div>
+          </div>
         </div>
       </div>
     </div>
