--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,9 +3,9 @@
 <div class="container text-center">
   <div class="row mt-4">
     <div class="col">
-        <h5>Ta proposition à bien été envoyée à notre équipe pour validation. </h5>
-        <h5> Tu recevra un mail dès que celle-ci sera mise en ligne.</h5>
-        <h5> En attendant n'hésite pas à aller voter pour tes propositions préférées et fais évoluer ta ville !</h5>
+        <h5>Votre proposition à bien été envoyée à notre équipe pour validation. </h5>
+        <h5>Vous recevrez un mail dès que celle-ci sera mise en ligne.</h5>
+        <h5>En attendant n'hésitez pas à aller voter pour vos propositions préférées et faites évoluer votre ville !</h5>
         <%= link_to "Propositions de ma ville", city_path(@city) ,class: "btn btn-primary"%>
     </div>
   </div>
