--- a/app/views/proposals/new.html.erb
+++ b/app/views/proposals/new.html.erb
@@ -3,14 +3,14 @@
   <div class="card">
     <%= form_for @proposal do |f| %>
       <div class="card-header card-header-text" data-background-color="blue">
-        <h4 class="card-title">Propose une initiative à <%= @city %></h4>
+        <h4 class="card-title">Proposez une initiative à <%= @city %></h4>
       </div>
       <div class="card-content">
         <div class="row">
           <label class="col-sm-1 label-on-left"></label>
           <div class="col-sm-9">
             <div class="form-group label-floating">
-              <%= f.label :title, "Titre *" %>   
+              <%= f.label :title, "Donnez un titre à votre proposition" %>   
               <%= f.text_field :title, autofocus: true, autocomplete: "title", class: "form-control" %>
             </div>
           </div>
@@ -19,7 +19,7 @@
           <label class="col-sm-1 label-on-left"></label>
           <div class="col-sm-9">
             <div class="form-group label-floating">
-              <%= f.label :purpose, "Précisions *" %>  
+              <%= f.label :purpose, "Pourquoi souhaitez vous lancer cette initiative? A quel problème souhaitez répondre?" %>  
               <%= f.text_area :purpose, rows: 2, autofocus: true, autocomplete: "purpose", class: "form-control" %>
             </div>
           </div>
@@ -28,7 +28,7 @@
           <label class="col-sm-1 label-on-left"></label>
           <div class="col-sm-9">
             <div class="form-group label-floating">
-            <%= f.label :category_id, "Categorie *" %>
+            <%= f.label :category_id, "Choisissez votre categorie: " %>
               <%= collection_select(:post, :category_id, Category.all, :id, :name, prompt: true) %> 
             </div>
           </div>
@@ -37,7 +37,7 @@
           <label class="col-sm-1 label-on-left"></label>
           <div class="col-sm-9">
             <div class="form-group label-floating">
-              <%= f.label :description, "Détails*" %>  
+              <%= f.label :description, " Expliquez votre proposition! N'hésitez pas à donner des détails ;)" %>  
               <%= f.text_area :description, rows: 5, autofocus: true, autocomplete: "description", class: "form-control" %>
             </div>
           </div>
