--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,14 +4,15 @@
 <div class="container" style="width: 35em;">
   <div class="row justify-content-center">
     <div class="card card-profile">
-      <div class="card-avatar">
-        <%if @user.avatar.attached?%>
-          <%= image_tag @user.avatar, alt: 'Avatar' %>
-        <%else%>
-          <p>Aucun avatar</p>
+      <!--A activer quand on pourra charger un photo de profil>
+      <!--<div class="card-avatar">-->
+        <%#if @user.avatar.attached?%>
+          <%#= image_tag @user.avatar, alt: 'Avatar' %>
+        <%#else%>
+          <!--<p>Aucun avatar</p>-->
           <!--<img class="img" src="https://cutewallpaper.org/21/iron-man-profile-picture/Iron-Man-Forum-Avatar-Profile-Photo-ID-131347-Avatar-.jpg" />-->
-        <%end%>
-      </div>
+        <%#end%>
+      <!--</div>-->
       <div class="card-content">
         <h6 class="category text-gray">Mes informations</h6>
         <br>
@@ -45,7 +46,11 @@
                   <tr>
                     <td><h5><%= proposal.title %></h5></td>
                     <%if proposal.is_online%>
-                      <td class="text-right"> <button class="btn btn-primary btn-xs">Voir la proposition</button>
+                      <td class="text-right"> 
+                      <a class="btn btn-primary btn-round btn-sm" href= "/proposals/<%=proposal.id%>" role="button">
+                        <i class="material-icons" style="font-size: 15px">visibility</i> Voir la proposition
+                      </a>
+                      </td>
                     <%else%>
                       <td class="text-right"><p></h2>En cours de validation <i class="material-icons" style="font-size: 13px">hourglass_empty</i></p>
                     <%end%>
