--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -31,8 +31,8 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Bienvenue <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><%= link_to 'Mon profil <i class="material-icons">person</i>'.html_safe, user_path(current_user.id), :class => "dropdown-item" %> </li> 
-            <li> <%= link_to 'Se déconnecter <i class="material-icons">pan_tool</i>'.html_safe, destroy_user_session_path, :class => "dropdown-item", method: :delete %></li>
+            <li><%= link_to 'Mon profil <i class="material-icons" style="font-size: 19px">person</i>'.html_safe, user_path(current_user.id), :class => "dropdown-item" %> </li> 
+            <li> <%= link_to 'Se déconnecter <i class="material-icons" style="font-size: 19px">person_remove</i>'.html_safe, destroy_user_session_path, :class => "dropdown-item", method: :delete %></li>
           </ul>
         </li>
         
@@ -40,8 +40,8 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Connexion <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><%= link_to 'Se connecter <i class="material-icons">login</i>'.html_safe, new_user_session_path %></li>
-            <li><%= link_to 'S\'inscrire <i class="material-icons">assignment_ind</i>'.html_safe, new_user_registration_path %></li>
+            <li><%= link_to 'Se connecter <i class="material-icons" style="font-size: 19px">login</i>'.html_safe, new_user_session_path %></li>
+            <li><%= link_to 'S\'inscrire <i class="material-icons" style="font-size: 19px">assignment_ind</i>'.html_safe, new_user_registration_path %></li>
           </ul>
         </li>
       </ul>
