pictures related to proposal ok

--- a/app/assets/stylesheets/material-dashboard/_cards.scss
+++ b/app/assets/stylesheets/material-dashboard/_cards.scss
@@ -280,10 +280,10 @@
         }
     }
 
-    img{
+    /*img{
         width: 100%;
         height: auto;
-    }
+    }*/
 
     .category{
         .material-icons{
