--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -19,7 +19,11 @@
               <h4>#<%= @proposals.index(x)+1 %></h4>
             </td>
             <td>
-              <img src = "https://images.pexels.com/photos/338515/pexels-photo-338515.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" style="height: 100px; width: 100px;">
+              <%if Proposal.find(x.id).picture.attached?%>
+                <%= image_tag Proposal.find(x.id).picture, width: 170, style: "height: auto"%>
+              <%else%>
+                <p>=Image=</p>
+              <%end%>
             </td>
             <td>
               <h4><%=x.title=%></h4>
@@ -43,8 +47,8 @@
             </tr>
             <%end%>
           </tbody>
-        </table>
-      </div>
+      </table>
     </div>
   </div>
+</div>
   
