link to contact

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -15,7 +15,7 @@
       </div>
       <div class="col-md-4">
         <h4 class=" mt-sm-3">Nous connaître</h4>
-        <p><a href="#" style="color:Gray;">À propos</a></p>
+        <p><a href="/contact" style="color:Gray;">À propos</a></p>
         <p><a href="#" style="color:Gray;">Mentions légales </a></p>
         <p><a href="#" style="color:Gray;">Notre charte</a></p>
         <p><a href="#" style="color:Gray;">Politique de confidentialité</a></p>
