--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -20,7 +20,7 @@
             <%end%> 
           </ul>
         </li>
-        <li><a href="#"><i class="material-icons">emoji_emotions</i> À propos d'Agora</a></li>
+        <li><a href="/contact"><i class="material-icons">emoji_emotions</i> À propos d'Agora</a></li>
       </ul>
       
 
