--- a/app/views/proposals/index.html.erb
+++ b/app/views/proposals/index.html.erb
@@ -126,7 +126,23 @@
     
     <div class="jumbotron" style="background-image: url(https://images.unsplash.com/photo-1547104984-924116a9c464?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1217&q=80); background-size: 100%;">
       <div class="container">
-        <h3 class="display-4 text-white"><b>Votre ville n'est pas encore disponible ? Dites-nous d'ou vous venez !</b></h3>
-        <p><a class="btn btn-primary btn-lg" href="mailto: zeagoraproject@gmail.com" role="button">Envoyer un mail</a></p>
+        <h3 class="display-4 text-white"><b>D'autres villes sont disponibles sur Agora! N'hésitez pas à les consulter!</b></h3>
+        <div class="dropdown">
+          <button href="#" class="btn dropdown-toggle btn-primary btn-lg"" data-toggle="dropdown" aria-expanded="true" >
+              <i class="material-icons">home</i>  Les villes disponibles
+              <b class="caret"></b>
+          </button>
+          <ul class="dropdown-menu">
+          <%City.all.each do |x|%>
+            <li><a href="cities/<%=x.id%>"><%=x.name%></a></li>
+          <%end%>
+          </ul>
+        </div>
       </div>
     </div>
+
+    <div class = "container text-center">
+      <h4 class="display-4 text-white"><b>Votre ville n'est pas encore disponible ? Dites-nous d'ou vous venez !</b></h4>
+      <p><a class="btn btn-primary " href="mailto: zeagoraproject@gmail.com" role="button"><i class="material-icons">mail</i>   Nous contacter</a></p>
+    </div>
+    <br>
