--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -49,7 +49,7 @@
                     <td><h5><%= proposal.title %></h5></td>
                     <%if proposal.is_online%>
                       <td class="text-right"> 
-                      <a class="btn btn-primary btn-round btn-sm" href= "/proposals/<%=proposal.id%>" role="button">
+                      <a class="btn btn-primary btn-round btn-sm" href= "<%= proposal_path(proposal) %>" role="button">
                         <i class="material-icons" style="font-size: 15px">visibility</i> Voir la proposition
                       </a>
                       </td>
