--- a/app/views/users/contact.html.erb
+++ b/app/views/users/contact.html.erb
@@ -81,7 +81,7 @@
                 <div class="card card-product">
                     <div class="card-image" data-header-animation="true">
                         <a href="#pablo">
-                            <%= image_tag("tim.jpeg", style: "width: 100%") %>  
+                            <%= image_tag("tim.jpg", style: "width: 100%") %>  
                         </a>
                     </div>
                     <div class="card-content">
@@ -105,7 +105,7 @@
             <div class="col-md-2">
                 <div class="card card-product">
                     <div class="card-image" data-header-animation="true">
-                        <%= image_tag("brahim.jpeg", style: "width: 100%") %>
+                        <%= image_tag("brahim.jpg", style: "width: 100%") %>
                     </div>
                     <div class="card-content">
                         <div class="card-actions">
@@ -157,7 +157,7 @@
         <div class="col-md-2">
             <div class="card card-product">
                 <div class="card-image" data-header-animation="true">                                  
-                    <%= image_tag("mathilde.jpeg", style: "width: 100%") %>                                  
+                    <%= image_tag("mathilde.jpg", style: "width: 100%") %>                                  
                 </div>
                 <div class="card-content">
                     <div class="card-actions">
