--- a/app/views/proposals/new.html.erb
+++ b/app/views/proposals/new.html.erb
@@ -1,4 +1,5 @@
 <br>
+<div class = container>
 <div class="col-md-12">
   <div class="card">
     <%= form_for @proposal do |f| %>
@@ -49,4 +50,5 @@
     <% end %>
     </div>
   </div>
+</div>
 </div>
