--- a/app/views/users/contact.html.erb
+++ b/app/views/users/contact.html.erb
@@ -1,6 +1,31 @@
 <div class="row">
     <div class="col-md-5"></div>
          <div class="col-md-4">
+             <h3>À propos d'Agora</h3>
+        </div>
+     <div class="col-md-5"></div>
+</div>
+<br>
+<div class="row featurette">
+    <div class="col-md-2"></div>
+        <div class="col-md-4">
+            <p class="lead">Agora est une plate-forme citoyenne vous permettant de proposer et de partager des initiatives locales, dans le but d'améliorer le quotidien de tous !
+                            De manière simple et claire, vous devenez un véritable acteur dans la vie de votre ville.
+            </p>
+            <p class="lead">Cette idée qui est née du désir de vouloir faire bouger les choses, vite, et tout cela de façon inclusive.
+                            Nous croyons en l'humain et c'est ensemble que nous irons plus loin.
+            </p>
+        </div>
+        <div class="col-md-3">
+             <img src = "https://images.unsplash.com/photo-1568992687947-868a62a9f521?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1778&q=80" width="462" height="300" >
+        </div>
+    <div class="col-md-2"></div>
+</div>
+<br>
+<br>
+<div class="row">
+    <div class="col-md-5"></div>
+         <div class="col-md-4">
              <h3>Nous contacter</h3>
         </div>
      <div class="col-md-5"></div>
@@ -16,22 +41,23 @@
                                 <tbody>
                                     <tr>
                                         <td>     
-                                            <i class="fa fa-envelope-o mr-3"></i>                                                       
+                                            <h4><i class="fa fa-envelope-o mr-3"></i></h4>                                                 
                                         </td>
-                                        <td class="text-right"> zeagoraproject@gmail.com
+                                        <td class="text-right"> <h4>zeagoraproject@gmail.com</h4>
                                         </td>                                                         
                                     </tr>
                                     <tr>
                                         <td>            
-                                            <i class="fa fa-phone mr-3"></i>             
+                                            <h4><i class="fa fa-phone mr-3"></i> </h4>            
                                         </td>
-                                        <td class="text-right"> 05 62 23 55 89
+                                        <td class="text-right"><h4> 05 62 23 55 89</h4>
                                         </td>                                                          
                                     </tr>
                                     <tr>
-                                        <td><i class="fa fa-map-marker" aria-hidden="true"></i>
+                                        <td>
+                                           <h4><i class="fa fa-map-marker" aria-hidden="true"></i></h4>
                                         </td>
-                                        <td class="text-right">22 rue des lauriers, 33000 Bordeaux
+                                        <td class="text-right"><h4>22 rue des lauriers, 33000 Bordeaux</h4>
                                         </td>                                                           
                                     </tr>                                                  
                                 </tbody>
@@ -43,6 +69,7 @@
         </div>
     </div>
 </div>
+<br>
 <br>
 <div class="row">
     <div class="col-md-5"></div>
