rename button load proposal image

--- a/app/views/proposals/create.html.erb
+++ b/app/views/proposals/create.html.erb
@@ -23,7 +23,7 @@
                     <%= file_field_tag :picture , class: "btn btn-sm btn-info text-center"%>
                   </div>
                   <div class="text-center">
-                    <%= submit_tag "Rattachez une image", class: "btn btn-sm btn-primary" %>
+                    <%= submit_tag "Rattachez l'image", class: "btn btn-sm btn-primary" %>
                   </div>
                 <% end %>
               </div>
