--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -29,7 +29,7 @@
         <% if user_signed_in? %>
          <li><%= link_to '<i class="material-icons">add_circle</i> Créer ma proposition'.html_safe, new_proposal_path, class: 'btn btn-info' %></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Bienvenue <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Bienvenue <%= current_user.first_name%> <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><%= link_to 'Mon profil <i class="material-icons" style="font-size: 19px">person</i>'.html_safe, user_path(current_user.id), :class => "dropdown-item" %> </li> 
             <li> <%= link_to 'Se déconnecter <i class="material-icons" style="font-size: 19px">person_remove</i>'.html_safe, destroy_user_session_path, :class => "dropdown-item", method: :delete %></li>
