--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -10,3 +10,17 @@ background-color: #FFFFFF !important;
 .text-wrap {
   word-wrap: break-word;
 }
+
+.my-jumbotron
+{
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.my-img
+{
+  max-width: 100%; 
+  max-height: 100%; 
+  display: block;
+}
