--- a/app/views/proposals/index.html.erb
+++ b/app/views/proposals/index.html.erb
@@ -1,4 +1,4 @@
-<div class="jumbotron" style="background-image: url(https://images.unsplash.com/photo-1547104984-924116a9c464?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1217&q=80); background-size: 100%;">
+<div class="jumbotron my-jumbotron" style="background-image: url(https://images.unsplash.com/photo-1547104984-924116a9c464?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1217&q=80);">
   <div class="container">
     <h1 class="display-4 text-white"><b>Faites porter votre voix et agissez ensemble dans votre ville</b></h1>
     <p  class="text-white">Agora est une plate-forme citoyenne vous permettant de proposer et de partager des initiatives locales  </p>
@@ -10,67 +10,63 @@
   </div>
 </div>
 
-<div class="container">
+<div class="container-fluid">
   <h2 class="text-center"><b>Comment ça marche ?</b></h2>
   <br>
   <br>
-  <div class="row featurette">
+  <div class="row">
     <div class="col-md-7">
       <h2 class="featurette-heading">Consultez et votez pour les propositions de votre ville <i class="material-icons" style="font-size: 35px">how_to_vote</i>
-        <p class="lead">Chaque jour des citoyens des votre ville postent des propositions pour améliorer le quotidien de la ville. Consultez et débattez des propositions ensemble!</p>
-      </div>
-      <div class="col-md-5">
-        <img src = "https://images.unsplash.com/photo-1516321497487-e288fb19713f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" width="577,5" height="375" >
-      </div>
+      <p class="lead">Chaque jour des citoyens des votre ville postent des propositions pour améliorer le quotidien de la ville. Consultez et débattez des propositions ensemble!</p>
     </div>
-    <br>
-    <br>
-    <br>
-    <div class="row featurette">
-      <div class="col-md-7 order-md-2">
-        <h2 class="featurette-heading">Proposez des idées sur des thèmes qui vous inspirent <i class="material-icons" style="font-size: 35px">wb_incandescent</i></h2>
-        <p class="lead">Une idée vous inspire depuis longtemps ? Sur Agora, vous êtes libres de proposer vos idées pour la ville. Nous veillons à ce que les propositions les plus pertinentes soient présentes.</p>
-      </div>
-      <div class="col-md-5 order-md-1">
-        <img src = "https://images.unsplash.com/photo-1550418290-a8d86ad674a6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" width="577,5" height="375" >
-      </div>
-    </div>
-    <br>
-    <br>
-    <br>
-    <div class="row featurette">
-      <div class="col-md-7 order-md-2">
-        <h2 class="featurette-heading">Sélectionnez les meilleures idées ensemble et agissez !<i class="material-icons" style="font-size: 35px">people</i></h2>
-        <p class="lead">Sur Agora, le système de vote permet de faire ressortir les meilleures propositions. Ensemble, unissez-vous pour faire avancer les choses!</p>
-      </div>
-      <div class="col-md-5 order-md-1">
-        <img src = "https://images.unsplash.com/photo-1543269865-cbf427effbad?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" width="577,5" height="375" >
-      </div>
+    <div class="col-md-5">
+      <img class="my-img" src="https://images.unsplash.com/photo-1516321497487-e288fb19713f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" width="577,5" height="375" >
     </div>
   </div>
-  <br>
-  <br>
   
-  <div class="jumbotron" style="background-image: url(https://images.unsplash.com/photo-1547104984-924116a9c464?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1217&q=80); background-size: 100%;">
-    <div class="container">
-      <h3 class="display-4 text-white"><b>Faites porter votre voix et changez votre ville !</b></h3>
-      <% if user_signed_in? %>
-      <p><%= link_to 'Je veux créer ma proposition', new_proposal_path, class: 'btn btn-primary btn-lg' %></p>
-      <%else%>
-      <p><a class="btn btn-primary btn-lg" href="/users/sign_in" role="button">Je veux créer ma proposition</a></p>
-      <%end%>
+  <div class="row">
+    <div class="col-md-5">
+      <img class="my-img" src="https://images.unsplash.com/photo-1550418290-a8d86ad674a6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" width="577,5" height="375" >
+    </div>
+    <div class="col-md-7">
+      <h2 class="featurette-heading">Proposez des idées sur des thèmes qui vous inspirent <i class="material-icons" style="font-size: 35px">wb_incandescent</i></h2>
+      <p class="lead">Une idée vous inspire depuis longtemps ? Sur Agora, vous êtes libres de proposer vos idées pour la ville. Nous veillons à ce que les propositions les plus pertinentes soient présentes.</p>
     </div>
   </div>
 
-  <div class = "container">
-    <h2 class="text-center"><b>Les meilleures propositions du moment</b></h2>
-    <div class="col-md-6">
-      <h3 class="text-center"><b>Paris</b></h3>
-      <div class="card">
-        <div class="card-content table-responsive table-full-width">
-          <table class="table">
-            <tbody>
-              <%@proposal_paris.each do |x|%>
+  <div class="row">
+    <div class="col-md-7">
+      <h2 class="featurette-heading">Sélectionnez les meilleures idées ensemble et agissez !<i class="material-icons" style="font-size: 35px">people</i></h2>
+      <p class="lead">Sur Agora, le système de vote permet de faire ressortir les meilleures propositions. Ensemble, unissez-vous pour faire avancer les choses!</p>
+    </div>
+    <div class="col-md-5">
+      <img class="my-img" src="https://images.unsplash.com/photo-1543269865-cbf427effbad?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" width="577,5" height="375" >
+    </div>
+  </div>
+</div>
+<br>
+<br>
+  
+<div class="jumbotron my-jumbotron" style="background-image: url(https://images.unsplash.com/photo-1547104984-924116a9c464?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1217&q=80);">
+  <div class="container">
+    <h3 class="display-4 text-white"><b>Faites porter votre voix et changez votre ville !</b></h3>
+    <% if user_signed_in? %>
+    <p><%= link_to 'Je veux créer ma proposition', new_proposal_path, class: 'btn btn-primary btn-lg' %></p>
+    <%else%>
+    <p><a class="btn btn-primary btn-lg" href="/users/sign_in" role="button">Je veux créer ma proposition</a></p>
+    <%end%>
+  </div>
+</div>
+  
+<div class = "container">
+  <h2 class="text-center"><b>Les meilleures propositions du moment</b></h2>
+  <div class="col-md-6">
+    <h3 class="text-center"><b>Paris</b></h3>
+    <div class="card">
+      <div class="card-content">
+        <table class="table table-responsive table-full-width">
+          <tbody>
+            <%@proposal_paris.each do |x|%>
               <tr>
                 <td></td>
                 <td>
@@ -78,9 +74,9 @@
                 </td>
                 <td>
                   <%if Proposal.find(x.id).picture.attached?%>
-                    <%= image_tag Proposal.find(x.id).picture, alt: "Card image", width: 170, style: "height: auto"%>
+                  <%= image_tag Proposal.find(x.id).picture, alt: "Card image", width: 170, style: "height: auto"%>
                   <%else%>
-                    <p>=Image=</p>
+                  <p>=Image=</p>
                   <%end%>
                 </td>
                 <td>
@@ -91,66 +87,66 @@
                   <span class="badge badge-primary"><%= x.category.name %></span>
                 </td>
                 <td><td>
-                </tr>
-                <%end%>
-              </tbody>
-            </table>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-6">
-        <h3 class="text-center"><b>Lyon</b></h3>
-        <div class="card">
-          <div class="card-content table-responsive table-full-width">
-            <table class="table">
-              <tbody>
-                <%@proposal_lyon.each do |x|%>
-                <tr>
-                  <td>
-                    <h4>#<%=@proposal_lyon.index(x)+1%></h4>
-                  </td>
-                  <td>
-                    <%if Proposal.find(x.id).picture.attached?%>
-                      <%= image_tag Proposal.find(x.id).picture, alt: "Card image",  width: 170, style: "height: auto"%>
-                    <%else%>
-                      <p>=Image=</p>
-                    <%end%>                  
-                  </td>
-                  <td>
-                    <p><%= x.title %></p>
-                    <a class="btn btn-primary btn-round btn-sm" href= "/proposals/<%=x.id%>" role="button">
-                      <i class="material-icons" style="font-size: 15px">visibility</i> Voir la proposition
-                    </a>
-                    <span class="badge badge-primary"><%= x.category.name %></span>
-                  </td>
-                </tr>
-                <%end%>
-              </tbody>
-            </table>
-          </div>
-        </div>
+              </tr>
+            <%end%>
+          </tbody>
+        </table>
       </div>
     </div>
+  </div>
+  <div class="col-md-6">
+    <h3 class="text-center"><b>Lyon</b></h3>
+    <div class="card">
+      <div class="card-content">
+        <table class="table table-responsive table-full-width">
+          <tbody>
+            <%@proposal_lyon.each do |x|%>
+            <tr>
+              <td></td>
+              <td>
+                <h4>#<%=@proposal_lyon.index(x)+1%></h4>
+              </td>
+              <td>
+                <%if x.picture.attached?%>
+                  <%= image_tag x.picture, alt: "Card image",  width: 170, style: "height: auto"%>
+                <%else%>
+                  <p>=Image=</p>
+                <%end%>                  
+              </td>
+              <td>
+                <p><%= x.title %></p>
+                <a class="btn btn-primary btn-round btn-sm" href= "/proposals/<%=x.id%>" role="button">
+                  <i class="material-icons" style="font-size: 15px">visibility</i> Voir la proposition
+                </a>
+                <span class="badge badge-primary"><%= x.category.name %></span>
+              </td>
+            </tr>
+            <%end%>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
     
-    <div class="jumbotron" style="background-image: url(https://images.unsplash.com/photo-1547104984-924116a9c464?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1217&q=80); background-size: 100%;">
-      <div class="container">
-        <h3 class="display-4 text-white"><b>D'autres villes sont disponibles sur Agora! N'hésitez pas à les consulter!</b></h3>
-        <div class="dropdown">
-          <button href="#" class="btn dropdown-toggle btn-primary btn-lg"" data-toggle="dropdown" aria-expanded="true" >
-              <i class="material-icons">home</i>  Les villes disponibles
-              <b class="caret"></b>
-          </button>
-          <ul class="dropdown-menu">
-          <%City.all.each do |x|%>
-            <li><a href="cities/<%=x.id%>"><%=x.name%></a></li>
-          <%end%>
-          </ul>
-        </div>
-      </div>
+<div class="jumbotron my-jumbotron" style="background-image: url(https://images.unsplash.com/photo-1547104984-924116a9c464?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1217&q=80);">
+  <div class="container">
+    <h3 class="display-4 text-white"><b>D'autres villes sont disponibles sur Agora! N'hésitez pas à les consulter!</b></h3>
+    <div class="dropdown">
+      <button href="#" class="btn dropdown-toggle btn-primary btn-lg"" data-toggle="dropdown" aria-expanded="true" >
+        <i class="material-icons">home</i>  Les villes disponibles
+        <b class="caret"></b>
+      </button>
+      <ul class="dropdown-menu">
+        <% City.all.each do |x| %>
+          <li><a href="cities/<%=x.id%>"><%=x.name%></a></li>
+        <%end%>
+      </ul>
     </div>
-
-    <div class = "container text-center">
-      <h4 class="display-4 text-white"><b>Votre ville n'est pas encore disponible ? Dites-nous d'ou vous venez !</b></h4>
-      <p><a class="btn btn-primary " href="mailto: zeagoraproject@gmail.com" role="button"><i class="material-icons">mail</i>   Nous contacter</a></p>
-    </div>
-    <br>
+  </div>
+</div>
+    
+<div class = "container text-center">
+  <h4 class="display-4 text-white"><b>Votre ville n'est pas encore disponible ? Dites-nous d'ou vous venez !</b></h4>
+  <p><a class="btn btn-primary " href="mailto: zeagoraproject@gmail.com" role="button"><i class="material-icons">mail</i>   Nous contacter</a></p>
+</div>
