order proposals by votes count in user profil + change proposal create way : user require and permit methods

--- a/app/views/proposals/new.html.erb
+++ b/app/views/proposals/new.html.erb
@@ -30,7 +30,7 @@
           <div class="col-sm-9">
             <div class="form-group label-floating">
             <%= f.label :category_id, "Choisissez votre categorie : " %>
-              <%= collection_select(:post, :category_id, Category.all, :id, :name, prompt: true) %> 
+              <%= collection_select(:proposal, :category_id, Category.all, :id, :name, prompt: true) %> 
             </div>
           </div>
         </div>
