--- a/app/views/proposals/index.html.erb
+++ b/app/views/proposals/index.html.erb
@@ -10,7 +10,7 @@
   </div>
 </div>
 
-<div class="container-fluid">
+<div class="container">
   <h2 class="text-center"><b>Comment ça marche ?</b></h2>
   <br>
   <br>
