--- a/app/views/proposals/index.html.erb
+++ b/app/views/proposals/index.html.erb
@@ -74,14 +74,14 @@
                 </td>
                 <td>
                   <%if x.picture.attached?%>
-                    <%= image_tag x.picture, alt: "Card image", class: 'my-img' %>
+                    <%= image_tag x.picture, alt: "Card image", width: 170, style: "height: auto" %>
                   <%else%>
                     <p>=Image=</p>
                   <%end%>
                 </td>
                 <td>
                   <p><%= x.title %></p>
-                  <a class="btn btn-primary btn-round btn-sm" href= "/proposals/<%= x.id %>" role="button">
+                  <a class="btn btn-primary btn-round btn-sm" href= "<%= proposal_path(x) %>" role="button">
                     <i class="material-icons" style="font-size: 15px">visibility</i> Voir la proposition
                   </a>
                   <span class="badge badge-primary"><%= x.category.name %></span>
@@ -108,14 +108,14 @@
               </td>
               <td>
                 <%if x.picture.attached?%>
-                  <%= image_tag x.picture, alt: "Card image", class: 'my-img' %>
+                  <%= image_tag x.picture, alt: "Card image", width: 170, style: "height: auto" %>
                 <%else%>
                   <p>=Image=</p>
                 <%end%>                  
               </td>
               <td>
                 <p><%= x.title %></p>
-                <a class="btn btn-primary btn-round btn-sm" href= "/proposals/<%=x.id%>" role="button">
+                <a class="btn btn-primary btn-round btn-sm" href= "<%= proposal_path(x) %>" role="button">
                   <i class="material-icons" style="font-size: 15px">visibility</i> Voir la proposition
                 </a>
                 <span class="badge badge-primary"><%= x.category.name %></span>
