--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,12 +1,12 @@
 <nav class="navbar navbar-primary" role="navigation">
   <div class="container">
     <div class="navbar-header">
-     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-    		</button>
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
       <a class="navbar-brand font-brand"  href="/">Agora</a>
     </div>
     
@@ -22,32 +22,29 @@
         </li>
         <li><a href="/contact"><i class="material-icons">emoji_emotions</i> À propos d'Agora</a></li>
       </ul>
-      
 
       <ul class="nav navbar-nav navbar-right">
-       
+        <li><%= link_to '<i class="material-icons">add_circle</i> Créer ma proposition'.html_safe, new_proposal_path, class: 'btn btn-info' %></li>
         <% if user_signed_in? %>
-         <li><%= link_to '<i class="material-icons">add_circle</i> Créer ma proposition'.html_safe, new_proposal_path, class: 'btn btn-info' %></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Bienvenue <%= current_user.first_name%> <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><%= link_to 'Mon profil <i class="material-icons" style="font-size: 19px">person</i>'.html_safe, user_path(current_user.id), :class => "dropdown-item" %> </li> 
-            <li> <%= link_to 'Se déconnecter <i class="material-icons" style="font-size: 19px">person_remove</i>'.html_safe, destroy_user_session_path, :class => "dropdown-item", method: :delete %></li>
-          </ul>
-        </li>
-        
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Bienvenue <%= current_user.first_name%> <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><%= link_to 'Mon profil <i class="material-icons" style="font-size: 19px">person</i>'.html_safe, user_path(current_user.id), :class => "dropdown-item" %> </li> 
+              <li> <%= link_to 'Se déconnecter <i class="material-icons" style="font-size: 19px">person_remove</i>'.html_safe, destroy_user_session_path, :class => "dropdown-item", method: :delete %></li>
+            </ul>
+          </li>
         <% else %>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Connexion <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><%= link_to 'Se connecter <i class="material-icons" style="font-size: 19px">login</i>'.html_safe, new_user_session_path %></li>
-            <li><%= link_to 'S\'inscrire <i class="material-icons" style="font-size: 19px">assignment_ind</i>'.html_safe, new_user_registration_path %></li>
-          </ul>
-        </li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Connexion <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><%= link_to 'Se connecter <i class="material-icons" style="font-size: 19px">login</i>'.html_safe, new_user_session_path %></li>
+              <li><%= link_to 'S\'inscrire <i class="material-icons" style="font-size: 19px">assignment_ind</i>'.html_safe, new_user_registration_path %></li>
+            </ul>
+          </li>
+        <% end %> 
       </ul>
-      <% end %> 
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+    </div>
+  </div>
 </nav>
 
 
