--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -24,3 +24,11 @@ background-color: #FFFFFF !important;
   max-height: 100%; 
   display: block;
 }
+
+.flex-row
+{
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  align-items: center;
+}
