improve proposal index display with flex-column class

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -32,3 +32,11 @@ background-color: #FFFFFF !important;
   justify-content: start;
   align-items: center;
 }
+
+.flex-column
+{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+}
